test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aosd-shift-reporting-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aosd-shift-reporting-frontend
  template:
    metadata:
      labels:
        app: aosd-shift-reporting-frontend
    spec:
      containers:
        - name: aosd-shift-reporting-frontend
          image: ghcr.io/eed-web-application/aosd-shift-reporting-frontend:sha-4df32ee
          resources:
            limits:
              memory: 512Mi
              cpu: "250m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gh-secret
