test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aosd-shift-reporting-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: accel-webapp-dev.slac.stanford.edu
      http:
        paths:
          - pathType: Prefix
            path: /aosd-shift-reporting-frontend(.*)
            backend:
              service:
                name: aosd-shift-reporting-frontend-service
                port:
                  number: 80
