test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aosd-shift-reporting-frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: aosd-shift-reporting-frontend
